fixed _ to - in spf13-vim line

--- a/site.yml
+++ b/site.yml
@@ -2,7 +2,7 @@
 - include: tasks/git.yml
 - include: tasks/dir_struct.yml
 - include: tasks/miniconda.yml
-- include: tasks/spf13_vim.yml
+- include: tasks/spf13-vim.yml
 # - include: tasks/ide_pycharm.yml
 # - include: tasks/ide_pydev.yml
 
