--- a/tasks/spf13-vim.yml
+++ b/tasks/spf13-vim.yml
@@ -3,4 +3,4 @@
 
   tasks:
   - name: install spf13-vim from http://vim.spf13.com/
-    command:  curl http://j.mp/spf13-vim3 -L -o - | sh
+    command:  curl http://j.mp/spf13-vim3 -L -o - | bash
