--- a/tasks/ide_pycharm.yml
+++ b/tasks/ide_pycharm.yml
@@ -1,9 +1,9 @@
 ---
-
+# file: tasks/ide_pycharm.yml
 - hosts: localhost
   sudo: True
 
   tasks:
       - name: Install pycharm and its java dependencies
-        command: ./install_pycharm 2>&1 | tee -a pycharm_install.log
+        command: ../scripts/install_pycharm &> pycharm_install.log
 
