--- a/site.yml
+++ b/site.yml
@@ -3,6 +3,6 @@
 - include: tasks/dir_struct.yml
 # - include: tasks/miniconda.yml
 - include: tasks/spf13-vim.yml
-# - include: tasks/ide_pycharm.yml
+- include: tasks/ide_pycharm.yml
 # - include: tasks/ide_pydev.yml
 
