--- a/site.yml
+++ b/site.yml
@@ -1,8 +1,10 @@
 # file: site.yml
-- include: tasks/git.yml
-- include: tasks/dir_struct.yml
-- include: tasks/miniconda.yml
-- include: tasks/spf13-vim.yml
-- include: tasks/ide_pycharm.yml
+- include: tasks/system_update.yml
+- include: tasks/oracle_java8.yml
+# - include: tasks/git.yml
+# - include: tasks/dir_struct.yml
+# - include: tasks/miniconda.yml
+# - include: tasks/spf13-vim.yml
+# - include: tasks/ide_pycharm.yml
 # - include: tasks/ide_pydev.yml
 
