--- a/tasks/miniconda.yml
+++ b/tasks/miniconda.yml
@@ -11,15 +11,15 @@
              owner={{ ansible_ssh_user }}
              mode=0775
     
-    - stat: path=/opt/py_devtools/miniconda3
+    - stat: path=/opt/pytools/miniconda3
       register: miniconda_exists
     
     - name: install miniconda
-      command: bash ./Miniconda3-latest-Linux-x86_64.sh -b -p /opt/py_devtools/miniconda3
+      command: bash ./Miniconda3-latest-Linux-x86_64.sh -b -p /opt/pytools/miniconda3
       when: miniconda_exists.stat.exists == False
 
     - name: change owner/permission on miniconda installation
-      file:  path=/opt/py_devtools/miniconda3
+      file:  path=/opt/pytools/miniconda3
              state=directory
              recurse=yes
              owner={{ ansible_ssh_user }}
