--- a/site.yml
+++ b/site.yml
@@ -1,7 +1,5 @@
 # file: site.yml
-- include: tasks/system_update.yml
-- include: tasks/oracle_java8.yml
-# - include: tasks/git.yml
+- include: tasks/prerequisites.yml
 # - include: tasks/dir_struct.yml
 # - include: tasks/miniconda.yml
 # - include: tasks/spf13-vim.yml
