added dir_struct.yml to prerequisites.yml and updated site.yml.  updated setup with new directory name /opt/pytools

--- a/tasks/prerequisites.yml
+++ b/tasks/prerequisites.yml
@@ -2,6 +2,7 @@
 # file:  tasks/prerequisites.yml
 
 - hosts: localhost
+  sudo: True
 
   tasks:
     # -------------------------------------------------------------------------
@@ -50,5 +51,23 @@
       file: path=../runcons
             state=directory
             recurse=yes
+            owner={{ ansible_ssh_user }}
+            mode=0755
+
+    # -----------------------------------------------------------------------
+    # Create the required directory structure
+    # -----------------------------------------------------------------------
+    - name: create python development directory under opt
+      file: path=/opt/pytools state=directory
+            owner={{ ansible_ssh_user }}
+            mode=0755
+
+    - name: create a envs directory under /opt/py_devtools
+      file: path=/opt/pytools/envs state=directory
+            owner={{ ansible_ssh_user }}
+            mode=0755
+
+    - name: create a projects directory in /opt for the users projects
+      file: path=/opt/projects state=directory
             owner={{ ansible_ssh_user }}
             mode=0755
