Added plays for installing Wget and cURL.

--- a/tasks/prerequisites.yml
+++ b/tasks/prerequisites.yml
@@ -13,6 +13,22 @@
         upgrade=dist
 
     # -------------------------------------------------------------------------
+    # Install cURL
+    # -------------------------------------------------------------------------
+    - name: Install cURL
+      apt:
+          name: curl
+          state: present
+
+    # -------------------------------------------------------------------------
+    # Install Wget
+    # -------------------------------------------------------------------------
+    - name: Install Wget
+      apt:
+          name: wget
+          state: present
+
+    # -------------------------------------------------------------------------
     # Install Oracle Java 8 and make default java on the system
     # -------------------------------------------------------------------------
     - name: removed openjdk
