--- a/tasks/ide_pycharm.yml
+++ b/tasks/ide_pycharm.yml
@@ -4,6 +4,16 @@
   sudo: True
 
   tasks:
-      - name: Install pycharm and its java dependencies
-        command: ../scripts/install_pycharm &> pycharm_install.log
+    # -------------------------------------------------------------------------
+    # Install pycharm
+    # -------------------------------------------------------------------------
+    - name: Install pycharm
+      command: wget -q -O - http://archive.getdeb.net/getdeb-archive.key | sudo apt-key add -
+      command: sudo sh -c 'echo "deb http://archive.getdeb.net/ubuntu trusty-getdeb apps" >> /etc/apt/sources.list.d/getdeb.list'
+
+      apt:
+          name: pycharm
+          update_cache: yes
+          state: present
+
 
