changed site.yml to include working miniconda.yml

--- a/site.yml
+++ b/site.yml
@@ -1,6 +1,6 @@
 # file: site.yml
 - include: tasks/prerequisites.yml
-# - include: tasks/miniconda.yml
+- include: tasks/miniconda.yml
 # - include: tasks/spf13-vim.yml
 # - include: tasks/ide_pycharm.yml
 # - include: tasks/ide_pydev.yml
