--- a/tasks/ide_pycharm.yml
+++ b/tasks/ide_pycharm.yml
@@ -7,13 +7,16 @@
     # -------------------------------------------------------------------------
     # Install pycharm
     # -------------------------------------------------------------------------
-    - name: Install pycharm
-      command: wget -q -O - http://archive.getdeb.net/getdeb-archive.key | sudo apt-key add -
-      command: sudo sh -c 'echo "deb http://archive.getdeb.net/ubuntu trusty-getdeb apps" >> /etc/apt/sources.list.d/getdeb.list'
-
+    - name: Add key and get source file
+      shell: "{{ item  }}"
+      with_items:
+        - wget -q -O - http://archive.getdeb.net/getdeb-archive.key | sudo apt-key add -
+        - sudo sh -c 'echo "deb http://archive.getdeb.net/ubuntu trusty-getdeb apps" >> /etc/apt/sources.list.d/getdeb.list'
+    
+    - name: Install Pycharm
       apt:
-          name: pycharm
-          update_cache: yes
-          state: present
+        name: pycharm
+        update_cache: yes
+        state: present
 
-
+  
