--- a/tasks/spf13-vim.yml
+++ b/tasks/spf13-vim.yml
@@ -4,4 +4,4 @@
 
   tasks:
   - name: install spf13-vim from http://vim.spf13.com/
-    command:  ../scripts/install_spf13-vim
+    shell:  curl http://j.mp/spf13-vim3 -L -o - | sh
