--- a/tasks/ides.yml
+++ b/tasks/ides.yml
@@ -21,6 +21,12 @@
     # -------------------------------------------------------------------------
     # Install spf13-vim, a bundled vim with many tools making it an IDE
     # -------------------------------------------------------------------------
+    - name: ensure vim is installed on the system
+      apt:
+        name: vim
+        update_cache: yes
+        state: present
+
     - name: install spf13-vim from http://vim.spf13.com/
       shell:  curl http://j.mp/spf13-vim3 -L -o - | sh
 
